# skala-db

./: README.md
data-project_2w-1/: .gitignore  README.md  academic_management_erd.dbml  academic_management_extra_data.sql  academic_management_report.md  academic_management_sample_data.sql  academic_management_schema.sql  종합실습2_보고서_설명문.md  종합실습2_성능비교.sql  종합실습2_성능비교_보고서문구.md
data-project_2w-2/: .gitignore  .gpt  README.md  practice1.py  requirements.txt  sales_amount_pipeline.joblib  valid_sales.csv  validation_errors.json  광주_3반_임해안.py  광주_3반_임해안2.py  광주_3반_임해안3.py
data-project_2w-2/End2End/: report.md  requirements.txt
data-project_2w-2/End2End/outputs/: income_classification_pipeline.joblib
data-project_2w-2/End2End/src/: end2end.py
data-project_2w-2/team/adult-census-income/: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  report.md
data-project_2w-2/team/adult-census-income/data/: data_manifest.json
data-project_2w-2/team/adult-census-income/models/: adult_income_pipeline.joblib  adult_income_pipeline.metadata.json
data-project_2w-2/team/adult-census-income/outputs/: 04_plotly_education_distribution.html  05_plotly_correlation_heatmap.html  06_plotly_workclass_comparison.html
data-project_2w-2/team/adult-census-income/src/adult_income/: __init__.py  config.py  console.py  data.py  eda.py  modeling.py  reporting.py  statistics.py  visualization.py  workflow.py
data-project_2w-2/team/adult-census-income/tests/: test_data.py  test_modeling.py  test_reporting.py  test_statistics.py
